@@ -1,6 +1,6 @@
 Package: lfe
-Version: 1.6-1180
-Date: 2014-01-04
+Version: 1.6-1188
+Date: 2014-01-23
 Title: Linear Group Fixed Effects
 Author: Simen Gaure, Ragnar Frisch Centre for Economic Research
 Maintainer: Simen Gaure <Simen.Gaure@frisch.uio.no>
@@ -15,7 +15,7 @@ Description: Transforms away factors with many levels prior to doing an OLS.
 License: Artistic-2.0
 Classification/JEL: C13, C33, C60
 Classification/MSC: 62J05, 65F10, 65F50
-Packaged: 2014-01-03 23:12:28 UTC; sgaure
+Packaged: 2014-01-23 18:26:46 UTC; sgaure
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-01-04 00:42:46
+Date/Publication: 2014-01-23 20:29:59
