@@ -1,9 +1,9 @@
-1a2735d7fac37edfaa4b1a9c709e63a4 *DESCRIPTION
+946c9f270c088128ffb5733c06f767b7 *DESCRIPTION
 8de5a26043b304943498b0d5ad291345 *NAMESPACE
 a4674dc6130e48bb9932cfd196089224 *R/chmethod.R
 b0d3a2c4e20ed4e7de0137c1d73cef68 *R/kaczmarz.R
-2ed39ff79204446541563d109ddb0e58 *R/lfe.R
-412399b3a0fe64f08bce9f087fe28195 *R/utils.R
+be888a2e981094cabd6ee2fb2fef3eeb *R/lfe.R
+2a796eed10f6a15bd15bee8b526dc02b *R/utils.R
 c14d5245d69668cb5dcf77dee5cf482d *build/vignette.rds
 ed252ef5cb8431ebb1695ad7fa2086f2 *cleanup
 1525dd8f5d729dc8ec8f9f93d6b0a97b *configure
@@ -11,19 +11,19 @@ d41d8cd98f00b204e9800998ecf8427e *configure.win
 2afdaf4817a33602a1683bf86c9c6866 *exec/lfescript
 fc7385ffd41508cd1de0e5847e196635 *inst/CITATION
 046c064a0ee31218120e934f6d3aa6ff *inst/TODO
-9da4ba4848bcc3a2c6b255417f636fea *inst/doc/CHANGELOG
+a71c56a103ce4845e5b99d509099059b *inst/doc/CHANGELOG
 4eada30e1432a55caec633f6205713c2 *inst/doc/gen2.R
 0ecfa918c79691345f6d018308aebf27 *inst/doc/identification.R
 c5b982dcad1a96ba49966378bd1ad871 *inst/doc/identification.Rnw
-98a41e1d8e28334536d58a5d22ea31e2 *inst/doc/identification.pdf
+a3ca62e5a9fd4798e5d84dae060afca0 *inst/doc/identification.pdf
 e85774aca8f1300645f09387ed3ce633 *inst/doc/index.html
 31dcf6258763b2fe1145f51a1f25d9b6 *inst/doc/lfeguide.txt
 e84dbc27cf086c5b81f8b1b536e87dc2 *inst/doc/lfehow.R
 913f28044f5caa444b06a0f8d6397fd7 *inst/doc/lfehow.Rnw
-f9f6962ad891236b3e1a33a8eb645a22 *inst/doc/lfehow.pdf
+da0c79af6a71a2b6491ee3d7c44ec026 *inst/doc/lfehow.pdf
 8aa082141d44a17db582a748781711b2 *inst/doc/speed.R
 993d2971a1a409789a2bc70aa324575b *inst/doc/speed.Rnw
-caf04c0dd39b8e11e57bdc80c1ec59ee *inst/doc/speed.pdf
+3042d85dadb3e66a6e50ec8f415f3d15 *inst/doc/speed.pdf
 d0676ee9e2f5a1ebba4b1af1bafaaa9e *inst/doc/test2.lfe
 de38cde1e0905cf616c270d7f68c01a8 *man/btrap.Rd
 3a0bcbe3af78cb9766d00c9ec7f3b33f *man/compfactor.Rd
@@ -34,7 +34,7 @@ de38cde1e0905cf616c270d7f68c01a8 *man/btrap.Rd
 935d24675c202287d15a9542993d26a6 *man/getfe.Rd
 e79e42e6819382c6fc8c1efabd39b0ce *man/is.estimable.Rd
 dd466d052dbe4ce6c28c0b644998c3c2 *man/kaczmarz.Rd
-2b12c01011366f93b0c94297cdd3a80c *man/lfe-package.Rd
+91a523a9e74f205187b4a761453e5089 *man/lfe-package.Rd
 3909bd29d87889db32c1aac0827a46cf *man/summary.felm.Rd
 4ed1cc1d460fb2a6cdddabbf94ae8df4 *src/Makevars.in
 2e3aa5cc6139d031286250a8de839afb *src/build/autoconf/aclocal.m4
@@ -49,9 +49,9 @@ e0fec6059b7c51210bcd727e78e94101 *src/config.h.in
 8c20c70abc157e1ec6bc39c7942d3948 *tests/comparelm.R
 7385ca7936ae3f86771339718a5272cf *tests/comparelm.Rout.save
 ec4b9da9f7761e382918a46a277c7ded *tests/degenerate.R
-ba4e58b1c4ff5db215d06a4174735130 *tests/degenerate.Rout.save
+c5c820e33c061e270cfea1d9a7c4c43a *tests/degenerate.Rout.save
 27b7760d27f528f185f2b45770ac8b9a *tests/efcheck.R
-28f6a86a12086f1cd922c70370012af7 *tests/efcheck.Rout.save
+64ae87d346d27511ab3c4d3fe81f59e2 *tests/efcheck.Rout.save
 4b03d76afee990893cf66eb34da8394a *tests/fourfac.R
 e3ca38a56340af117787e1b295f3ee17 *tests/fourfac.Rout.save
 c3b43e28ed26872609871f0cd8ab32d4 *tests/interact.R
