@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2014-01-01 r64612) -- "Unsuffered Consequences"
+R Under development (unstable) (2014-01-05 r64665) -- "Unsuffered Consequences"
 Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -39,6 +39,9 @@ Loading required package: Matrix
 > 
 > ## estimate
 > est <- felm(y ~ x+x2 + x3 + x4 + x5 + x6 + G(id) + G(firm))
+Warning message:
+In chol.default(mat, pivot = TRUE) :
+  the matrix is either rank-deficient or indefinite
 > ## extract the group fixed effects
 > alpha <- getfe(est)
 > #summary(est)  # remove from cran
@@ -55,4 +58,4 @@ accuracy: 1.00000000e+00 1.00000000e+00>
 > 
 > proc.time()
    user  system elapsed 
-  4.156   0.072   4.170 
+  5.335   0.205   5.609 
